--- a/.htaccess
+++ b/.htaccess
@@ -2,5 +2,7 @@ AddDefaultCharset utf-8
 
 RewriteEngine on
 RewriteBase /mvc
+RewriteCond %(REQUEST_FILENAME) !-f
+RewriteCond %(REQUEST_FILENAME) !-d
 RewriteRule ^(.*)$ index.php
 
